<resources>
    <string name="app_name">VideosPlus</string>
    <string name="logo_text">VideosPlus</string>
    <string name="password_input_hint">Password</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="sign_in_textView">Sign in</string>
    <string name="username_input_hint">Username</string>
    <string name="best_rated_movies">Best Rated Movies</string>
    <string name="best_rated_shows">Best Rated Shows</string>
    <string name="search_text">Search Movies&#8230;</string>
    <string name="home_button_description">home</string>
    <string name="movies_button_description">movies</string>
    <string name="shows_button_description">shows</string>
    <string name="downloads_button_description">downloads</string>
    <string name="favorite_text">favorite</string>
    <string name="arrow_back_text">arrow_back</string>
    <string name="movie_actor_info_text">test</string>
    <string name="movie_duration_text">0</string>
    <string name="movie_rating_text">0</string>
    <string name="movie_release_text">0</string>
    <string name="movie_summary_text">test</string>
    <string name="movie_title_text">Title</string>
    <string name="big_movie_poster_text">big movie poster</string>
    <string name="actors_text">Actors</string>
    <string name="summary_text">Summary</string>
    <string name="movie_image_text">movie image</string>
    <string name="movie_stars_text">movie stars</string>
    <string name="score_text">Score</string>
    <string name="title_text">Title</string>
    <string name="movies_text">Movies</string>
    <string name="genre_text">Genre</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_icon">Search icon</string>
    <string name="play_arrow">play arrow</string>
    <string name="format">Format:</string>
    <string name="resolution">Resolution:</string>
    <string name="sign_up_button_text">Sign up</string>
    <string name="register_button_text">Register</string>
    <string name="login_button_text">Login</string>
    <string name="password_input2_register_text">Password again</string>
    <string name="register_textView_text">Register</string>
    <string name="login_textView_text">Login</string>
    <string name="movie_version_text">Version:</string>
</resources>