<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="#2f2f39">

    <ImageView
        android:id="@+id/movies_poster"
        android:layout_width="120dp"
        android:layout_height="180dp"
        android:contentDescription="@string/movie_image_text"
        app:layout_constraintBottom_toTopOf="@+id/movies_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movies_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:lines="2"
        android:maxLines="2"
        android:text="@string/title_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/movies_poster"
        app:layout_constraintStart_toStartOf="@+id/movies_poster"
        app:layout_constraintTop_toBottomOf="@+id/movies_poster" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/movie_stars_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/movies_rating"
        app:layout_constraintStart_toStartOf="@id/movies_title"
        app:layout_constraintTop_toBottomOf="@id/movies_title"
        app:srcCompat="@drawable/baseline_star_24" />

    <TextView
        android:id="@+id/movies_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_text"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/imageView5"
        app:layout_constraintEnd_toEndOf="@id/movies_title"
        app:layout_constraintStart_toEndOf="@id/imageView5"
        app:layout_constraintTop_toTopOf="@id/imageView5" />
</androidx.constraintlayout.widget.ConstraintLayout>