<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:background="@drawable/main_background"
    tools:context=".activity.LoginActivity">

    <EditText
        android:id="@+id/username_input_register"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/box_background"
        android:ems="10"
        android:hint="@string/username_input_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/password_input_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_textView" />

    <EditText
        android:id="@+id/password_input_register"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/box_background"
        android:ems="10"
        android:hint="@string/password_input_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColor="#FBFAFA"
        android:textColorHint="#FBFAFA"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/password_input2_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_input_register" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_grey"
        android:text="@string/sign_up_button_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input2_register" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text"
        android:backgroundTint="@color/light_grey"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_button" />

    <EditText
        android:id="@+id/password_input2_register"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/box_background"
        android:ems="10"
        android:hint="@string/password_input2_register_text"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColor="#FBFAFA"
        android:textColorHint="#FBFAFA"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input_register" />

    <TextView
        android:id="@+id/register_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/register_textView_text"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/username_input_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>