<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:background="@drawable/main_background"
    tools:context=".activity.LoginActivity">

    <EditText
        android:id="@+id/username_input"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="30dp"
        android:autofillHints=""
        android:background="@drawable/box_background"
        android:ems="10"
        android:hint="@string/username_input_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/password_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="300dp"
        android:autofillHints=""
        android:background="@drawable/box_background"
        android:ems="10"
        android:hint="@string/password_input_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColor="#FBFAFA"
        android:textColorHint="#FBFAFA"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_input" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:backgroundTint="@color/light_grey"
        android:text="@string/sign_in_button_text"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input" />
</androidx.constraintlayout.widget.ConstraintLayout>